docs: complete Java language fundamentals